--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YourShop</title>
+  <title>TechTunes</title>
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
@@ -17,8 +17,8 @@
       <div class=" container navbar">
 
         <div class="navbar-brand">
-          <img src="images/YS.jpg" alt="">
-          <a href="#">YourShop</a>
+          <!-- <img src="images/YS.jpg" alt=""> -->
+          <a href="#">TechTunes</a>
         </div>
         <div class="navbar-right">
           <button class="signup-btn" onclick="window.location.href='signup.html'">Sign Up</button>
@@ -52,18 +52,7 @@
     </div>
   </header>
 
-
-
-
-
   <!-- ------------------------------------- END OF HEADER SECTION ---------------------------------------------- -->
-
-
-
-
-  
-
-
 
   <div class="myDiv">
     <div class="features_container">
@@ -106,13 +95,7 @@
     </div>
   </div>
 
- 
-
-
-
 <!-- --------------------------  END OF FEATURES SECTION ------------------------ -->
-
-
 
   <section class="container advantages">
     <div class=" adv_heading">
@@ -194,7 +177,6 @@
           </div>
         </div>
 
-
       </div>
       <div class="footer_copyright">
         <small>Copyright &copy; Practice Website</small>
@@ -202,12 +184,6 @@
     </div>
 
   </section>
-
-
-
-
-
-
 
   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
