--- a/myaction.html
+++ b/myaction.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="main_heading">
-        <h1>Your are Registered Successfull</h1>
+        <div class="actionContainer">
+            <h1>You are Registered Successfully</h1>
+            <a href="index.html"><button class="btn">Shop Now</button></a>
+        </div>
+       
     </div>
 </body>
 </html>
